# tkutil

./: CMakeLists.txt  CMakePresets.json  README.md  versions.txt
.github/workflows/: check-version.yml  cmake-ci.yml  cmake-mainline-ci.yml  cmake-ubuntu.yml  make-release.yml  spack-ci.yml  spack-ci2.yml  spack-install-ubuntu.yml  spack-mainline-ci.yml  spack-reusable.yml  spack-ubuntu.yml
cmake/: python_binding.cmake  version.cmake
src/: CMakeLists.txt
src/TkUtil/: ApplicationStats.cpp  CMakeLists.txt  File.cpp  LocalNetwork.cpp  MachineData.cpp  Process.cpp  ScriptingLog.cpp  ThreadPool.cpp  Threads.cpp  UnicodeString.cpp  Version.cpp
src/TkUtil/cmake/: TkUtilConfig.cmake.in
src/TkUtil/public/TkUtil/: ApplicationStats.h  File.h  FileLock.h  LocalNetwork.h  MachineData.h  Process.h  ScriptingLog.h  ThreadPool.h  Threads.h  UTF8String.h
src/TkUtilScripting/: CMakeLists.txt
src/TkUtilScripting/cmake/: TkUtilScriptingConfig.cmake.in
src/TkutilLauncher/: CMakeLists.txt
src/appstats/: CMakeLists.txt  appstats.cpp
src/appstats/cmake/: AppstatsConfig.cmake.in
src/encoding/: CMakeLists.txt
src/socket_proxy/: CMakeLists.txt  socket_proxy.cpp
src/socket_proxy_test/: CMakeLists.txt  echo_srv.cpp
src/tests/: CMakeLists.txt  ansi_esc_codes.cpp  app_usage.cpp  conversions.cpp  date.cpp  dir_list.cpp  exceptions.cpp  fileExtractor.cpp  fileinfos.cpp  hostinfos.cpp  joinable.cpp  locale.cpp  logs.cpp  memory.cpp  modify_script.cpp  process.cpp  remoteProcess.cpp  removefile.cpp  script_tags.cpp  scripting_logs.cpp  thread_manager.cpp  thread_pool.cpp  timer.cpp  tmpfile.cpp  unicode.cpp  urlfifo.cpp  utf8.cpp  utf8chars.cpp
test_link/: CMakeLists.txt  main.cpp
